--- a/5-4WritingHTML/index.html
+++ b/5-4WritingHTML/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>My top 5 music artist</title>
+		<title>My top 4 Singers</title>
 	</head>
 	<body>
 		 <h1>Sabrina Carpenter</h1>
